...
        //Query the database for the list of departments
        results = [[NSArray alloc] initWithArray:[dt loadDataFromDB:@"SELECT DISTINCT(Department) FROM Employees ORDER BY Department ASC;"]];
        
        /** Store just the department strings in tempArray from results (which is an NSArray of NSDictionaries) */
        tempArray = [[NSMutableArray alloc] initWithArray:[results valueForKey:@"Department"]];
        
        //First option for selecting a department will be "(Leave Blank)"
        [tempArray insertObject:@"(Leave Blank)" atIndex:0];
        
        
        departForBackEnd = [NSArray arrayWithArray:tempArray];
        
        //Reset tempArray so that it can be reused to build the NSArray for the front end
...
                }
                
                else if([tempString caseInsensitiveCompare:@"TRANSPORTN"] == NSOrderedSame){
                    [tempArray addObject:@"TRANSPORTATION"];
                }
                else if([tempString caseInsensitiveCompare:@"ADMIN HEARNG"] == NSOrderedSame){
                    [tempArray addObject:@"ADMIN HEARING"];
                }
                else{
                    [tempArray addObject:tempString];
                }
                
            }//end of outer if statement
...
